update config files

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ dist/
 
 !.gitignore
 
-*/__pycache__/
+__pycache__/
+VirtualJudgeSpider/__pycache__/
 VirtualJudgeSpider/OJs/__pycache__/
 
 .DS_Store
