--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,10 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
 # command to run tests
 script:
   - python3 setup.py install
-  - python3 -m unittest test.test_config.TestResult
-  - python3 -m unittest test.test_control.TestOJBuilder
-  - python3 -m unittest test.test_hdu.TestHDU
-  - python3 -m unittest test.test_poj.TestPOJ
-  - python3 -m unittest test.test_utils.TestUtils
+  coverage run --source=VirtualJudgeSpider setup.py
+after_success:
+  coveralls
