--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
 # command to run tests
 script:
   - python3 setup.py install
-  - coverage run --source=VirtualJudgeSpider setup.py
+  - coverage run --source=VirtualJudgeSpider setup.py test
 after_success:
   coveralls
