--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ install:
 script:
   - python3 setup.py install
   - coverage run --source=VirtualJudgeSpider setup.py test
+  - flake8 --max-line-length=120 --exclude=venv,__pycache__
 after_success:
   coveralls
