--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
-  - pip install coveralls
+  - pip install coveralls flake8
 # command to run tests
 script:
   - python3 setup.py install
