--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ install:
 # command to run tests
 script:
   - python3 setup.py install
-  - coverage run --source=VirtualJudgeSpider setup.py test
   - flake8 --max-line-length=120 --exclude=venv,__pycache__
+  - coverage run --source=VirtualJudgeSpider setup.py test
+  - coverage report
 after_success:
   coveralls
