fix flake8 test

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 # command to run tests
 script:
   - python3 setup.py install
-  - flake8 --max-line-length=120 --exclude=venv,__pycache__
+  - flake8 --ignore=E722 --max-line-length=120 --exclude=venv,__pycache__ .
   - coverage run --source=spider setup.py test
   - coverage report
 after_success:
